@@ -6,7 +6,7 @@ Improve precision/performance of general sound filtering and resampling to final
 Improve sound pitch for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
 Further improved BSMT2000 sound core for Sega, Alvin G., Data East (Batman and newer), and Stern (up to Terminator 3) DMD generation games
 Further improved AT91 sound core for the rest of the Stern DMDs (Elvis, LOTR, RBION, Sopranos, Nascar/Grand Prix/Dale Jr.)
- but still one should avoid high volume levels for these machines (~24 and above, for example on Nascar)
+ but still one should avoid high volume levels for these machines (~24 and above, for example on Nascar, or even ~20 on LOTR)
 Improved AT91 core emulation features
  and add 'at91jit' option to disable it
 Improved FM sound emulation cores (like AY8910, YMF262 and YM2151: so a lot of Gottlieb generations, old Ballys, pre-DCS games, etc)
@@ -18,6 +18,7 @@ Slightly lowpass filter DCS sound core (Indiana Jones and up) to remove some of 
 Improved GTS80BS/GTS3 DAC & OKI6376/ADPCM sound cores (Gottlieb DMDs, etc)
 Improved GTS80SS DAC sound core (Haunted House, Black Hole, Mars God of War, etc)
 Improved DMD brightness level mapping for Gottlieb GTS3 & AlvinG
+Add support for modulated/multi-level flashers on WPC (see whatsnewVPM.txt on how to enable it)
 
 *** ROM SUPPORT *** Thanks to Timmo, Chad Hendrickson, Inkochnito
 Kinda new:
